# conv_rag

./: .gitignore  README.md  pyproject.toml
conv_rag/: app.py  conversation.py  generation.py  indexer.py  loader.py  main_indexer.py  ocr_processor.py  retriever.py  run_app.py  vector_store_eval.py
conv_rag/utils/: logging_utils.py
data/debug/: chunk_sample_1.txt  chunk_sample_2.txt  chunk_sample_3.txt  chunk_sample_4.txt  chunk_sample_5.txt  chunk_sample_6.txt
data/indexes/um_nyobe_chroma/bb04c0a4-0eb0-460a-8ea8-65c71a2efff1/: index_metadata.pickle
data/indexes/um_nyobe_index/: index.faiss  index.pkl
data/ocr/: um-nyobe-ecrits-sous-maquis-formatted.txt
