[tool.poetry]
name = "conv-rag"
version = "0.1.0"
description = "Conversational agent with a retrieval augmented generation architecture"
authors = ["HermesNdjeng <yanndjeng@yahoo.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"
langchain = "^0.3.25"
langchain-community = "^0.3.24"
langchain-openai = "^0.3.16"
faiss-cpu = "^1.11.0"
sentence-transformers = "^4.1.0"
pypdf = "^5.5.0"
chromadb = "^1.0.9"
tiktoken = "^0.9.0"
pydantic = "^2.11.4"
colorlog = "^6.9.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
